minor z-index fix (header)

--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -30,7 +30,7 @@ header {
   padding: 2em 1.5em;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 header div img {
   margin-bottom: 20px;
